<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <CheckBox
        android:id="@+id/checkbox_batporcess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input" />

        <EditText
            android:id="@+id/edittext_input"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_hint" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button_browse_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox_samedir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output_samedir" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/output" />

        <EditText
            android:id="@+id/edittext_output"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/output_hint" />

        <Button
            android:id="@+id/button_browse_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse" />

    </LinearLayout>

    <Button
        android:id="@+id/button_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/process" />

</LinearLayout>